@@ -41,7 +41,7 @@
 			<div role="tabpanel" class="tab-pane" id="steps">
 				<div class="panel panel-tab">
 					<div class="panel-body">
-						<f:render partial="DataModule/StepsTab" arguments="{steps: configuration.steps}" />
+						<f:render partial="DataModule/StepsTab" arguments="{configuration: configuration}" />
 					</div>
 				</div>
 			</div>
